--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
-    <title>spookify | </title>
-    
+    <p>spook<span>ify.</span></p>
 </head>
 
+
 <body>
-    <header>
-        <nav>
-            <p>spookify</p>
-            <ul>
-                <li>Stories</li>
-                <li>Authors</li>
-                <li>Contact</li>
-                <a href="#">Sign Up</a>
+    <header class="homepage">
+        <nav class="navigation">
+            <p class="logo">spook<span class="firstlogo">ify.</span></p>
+            <ul class="nav_title">
+                <li class="navigation_title"> <a class="top" href="#">Stories</a></li>
+                <li class="navigation_title"> <a class="top" href="#">Authors</a></li>
+                <li class="navigation_title"> <a class="top" href="#"> Contact</a></li>
+                <li class="navigation_title"> <a class="top" href="#"><strong>Sign Up</strong></a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
             <div>
-                <figure>
-                    <img src="images/landing-image.png" alt="Pumpkin Image">
+                <figure class="Image">
+                    <img src="images/landing-image.png" width = "300" height = "300" alt="Pumpkin Image">
                 </figure>
                 <h1>Tales of the Undead</h1>
-                <h2>Scare yourself, scare your friends, for all we care</h2>
-                <a href="#">Get Started</a>
+                <h2>Scare yourself, scare your friends,<br> for all we care</h2>
+                <a class="started" href="#">Get Started</a>
             </div>
         </section>
         <section class="stories">
