--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
-    <p>spook<span>ify.</span></p>
+    <title>spookify | </title>
 </head>
 
 
@@ -34,33 +34,36 @@
                 </figure>
                 <h1>Tales of the Undead</h1>
                 <h2>Scare yourself, scare your friends,<br> for all we care</h2>
-                <a class="started" href="#">Get Started</a>
+                <a class="Getstarted" href="#">Get Started</a>
             </div>
         </section>
         <section class="stories">
-            <div>
-                <div>
-                    <figure>
-                        <img src="" alt="Top Story - Paramdam">
+            <div class="overall"><span class="box"></span>
+                <div class="secondoverall">
+                    <div class="Story_Title"><a class="storytitle" href="#">Top Stories</a></div>
+                    <figure class="paramdamstory">
+                        <img src="images/paramdam.png" alt="Top Story - Paramdam" class="storyone">
                     </figure>
-                    <h3>Paramdam</h3>
-                    <p>Mga bandang gabi or madaling araw nagising sya kasi may dumadaan sa bintana kaya binuksan nya
+                    <h3 class="StoryOne">Paramdam</h3>
+                    <div class="bgcolor1"><p class="detail">Mga bandang gabi or madaling araw nagising sya kasi may dumadaan sa bintana kaya binuksan nya
                         pinto nun, pag bukas ng pinto nakita nya daw si papa naka upo dun sa pwesto nys ng pinag
                         iinuman. Iyak ng iyak ate ko nun, kwento ng lola ko na hindi na rin nakapag tinda dahil sa
-                        takot.
-                        Kinabukasan, dun na rin ako natulog samin pero sumama pa rin pinsan ko dahil sa takot. </p>
+                        takot.<br><br>
+                        Kinabukasan, dun na rin ako natulog samin pero sumama pa rin pinsan ko dahil sa takot. </p></div>
+                    <div class="readmore"><a class="readmore" href="#">Read More...</a></div>
                 </div>
-                <div>
-                    <figure>
-                        <img src="" alt="Top Story - Senyales">
+                <div class="secondoverall"><span class="box1"></span>
+                    <figure class="StoryTwo">
+                        <img src="images/senyales.png" alt="Top Story - Senyales" class="Senyalesimg">
                     </figure>
-                    <h3>Senyales</h3>
-                    <p>Kinaumagahan may tumawag sakin na ka trabaho ko. May naganap daw na barilan sa labas ng
+                    <h3 class="SecondStory">Senyales</h3>
+                    <div class="bgcolor2"><p class="story2">Kinaumagahan may tumawag sakin na ka trabaho ko. May naganap daw na barilan sa labas ng
                         tinatrabahoan namin at may patay isa nabaril raw. May damage rin ang store na pinagtrabahoan
-                        namin.
+                        namin. <br><br>
                         Sobrang kabog ng dibdib ko dahil kung hindi lang ako sinabihan ng mag inang yun, siguro ako yung
                         nabiktima nung gabing yun, laking pasasalamat ko sa mag inang yun, sinubukan ko silang hanapin
-                        pero hindi ko mahanap.</p>
+                        pero hindi ko mahanap.</p></div>
+                    <div class="readmore1"><a class="readmore1" href="#">Read More...</a></div>
                 </div>
             </div>
         </section>
