--- a/index.html
+++ b/index.html
@@ -68,30 +68,26 @@
             </div>
         </section>
         <section class="authors">
-            <div>
+            <div><div class="TopAuthors"><a class="TopAuthors" href="#">Top Authors</a></div>
                 <div>
-                    <figure>
-                        <img src="images/author-cris.png" alt="Top Author #1">
-                        <h3>Cris James</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque arcu facilisis sodales
-                            aliquam dolor sit luctus amet. Aliquet egestas amet amet iaculis orci eget eu.</p>
+                    <figure class="author1">
+                        <img src="images/author-cris.png" alt="Top Author #1" class="name">
+                        <h3 class="authorname">Cris James</h3>
+                        <p class="class">Story: Paramdam </p><p class="class">Published: 2022</p>
                     </figure>
                 </div>
                 <div>
-                    <figure>
-                        <img src="images/author-katie.png" alt="Top Author #2">
-                        <h3>Katie Kim/h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque arcu facilisis
-                                sodales
-                                aliquam dolor sit luctus amet. Aliquet egestas amet amet iaculis orci eget eu.</p>
+                    <figure class="author2">
+                        <img src="images/author-katie.png" alt="Top Author #2" class="name">
+                        <h3 class="authorname">Katie Kim</h3>
+                            <p class="class">Story: Senyales</p><p class="class">Published: 2009</p>
                     </figure>
                 </div>
                 <div>
-                    <figure>
-                        <img src="images/author-scarlette.png" alt="Top Author #3">
-                        <h3>Scarlette Dickinson</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque arcu facilisis sodales
-                            aliquam dolor sit luctus amet. Aliquet egestas amet amet iaculis orci eget eu.</p>
+                    <figure class="author3">
+                        <img src="images/author-scarlette.png" alt="Top Author #3" class="name">
+                        <h3 class="authorname">Scarlette Dickinson</h3>
+                        <p class="class">Story: Halik na Itim</p><p class="class">Published: 2022</p>
                     </figure>
                 </div>
             </div>
