Fifth/Last Commit

--- a/index.html
+++ b/index.html
@@ -93,14 +93,15 @@
             </div>
         </section>
         <footer>
-            <div>
-                <h1>Dare to Spookify</h1>
-                <input type="text" placeholder="Enter your Email Address">
-                <input type="submit" value="Spook Us">
-                <p>©2022 Spookify 🎃, Inc. Terms & Conditions, Privacy</p>
+            <div class="container-3">
+                <h1 class="DtS">Dare to spookify?</h1>
+                <input type="text" placeholder="Enter your Email Address" class="f-input">
+                <input type="submit" value="Spook Us" class="SU">
+                <p class="credits">©2022 Spookify 🎃, Inc. Terms & Conditions, Privacy</p>
+                <div><img src="images/Vector.png" class="img-footer" alt=""></div>
             </div>
         </footer>
     </main>
-</body>
+</body> 
 
 </html>
